--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ header {
   padding: 15px;
   background-color: burlywood;
   text-align: center;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 header a {
